--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -18,6 +18,7 @@
     border-radius: 20px;
     margin-right: 20px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 992px) {
