--- a/src/styles/productcard.css
+++ b/src/styles/productcard.css
@@ -10,20 +10,23 @@
 }
 
 .product-img-container {
-    width: 100%;
+    max-width: 160px;
 }
 
 .product-title {
     margin-top: 20px;
+    height: 20px;
     font-size: .9rem;
 }
 
 .product-description {
+    height: 45px;
     margin-top: 15px;
     font-size: .82rem;
 }
 
 .product-quantity {
+    margin-left: 5px;
     margin-top: 30px;
     font-size: .82rem;
 }
@@ -40,7 +43,8 @@
 
 .product-info {
     height: 100%;
-    padding: 0 20px;
+    padding: 0 0 0 20px;
+    width: 200px;
 }
 
 .product-img{
@@ -66,6 +70,10 @@
         height: 380px;
         width: 200px;
         padding-top: 20px;
+    }
+
+    .product-info {
+        padding-right: 20px;
     }
 }
 
