--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -6,6 +6,8 @@
     border-radius: 15px;
     background: #FFF;
     box-shadow: 5px 5px 20px 0px rgba(133, 133, 133, 0.20);
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 .discount-container {
@@ -33,8 +35,9 @@
 }
 
 .item-img {
-    height: 60px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
 }
 
 .item-info {
@@ -43,6 +46,11 @@
     justify-content: space-between;
     padding: 10px 0;
     color: #474747;
+}
+
+.disc-item-info {
+    padding: 0;
+    justify-content: center;
 }
 
 .item-title {
@@ -66,6 +74,10 @@
     padding: 0 10px;
 }
 
+.disc-item-quantity {
+    padding: 15px 0;
+}
+
 .item-count {
     display: flex;
     justify-content: space-between;
@@ -78,6 +90,11 @@
 
 .item-availability {
     text-align: center;
+    justify-content: center;
+}
+
+.offer {
+    color: red;
 }
 
 @media only screen and (max-width: 992px) {
