--- a/src/styles/item.css
+++ b/src/styles/item.css
@@ -10,19 +10,6 @@
     margin-bottom: 20px;
 }
 
-.discount-container {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 30px;
-}
-
-.discount-description {
-    width: 150px;
-    font-size: .85rem;
-    padding-top: 10px;
-}
-
 .item-wrapper {
     height: 80px;
     width: 650px;
@@ -48,11 +35,6 @@
     color: #474747;
 }
 
-.disc-item-info {
-    padding: 0;
-    justify-content: center;
-}
-
 .item-title {
     font-size: .9rem;
     font-weight: 600;
@@ -74,10 +56,6 @@
     padding: 0 10px;
 }
 
-.disc-item-quantity {
-    padding: 15px 0;
-}
-
 .item-count {
     display: flex;
     justify-content: space-between;
@@ -93,25 +71,17 @@
     justify-content: center;
 }
 
-.offer {
-    color: red;
-}
-
-@media only screen and (max-width: 992px) {
-    
-}
-
 @media only screen and (max-width: 768px) {
-    .item-wrapper {
-        flex-direction: column;
-        height: 250px;
-        width: 300px;
-        align-items: center;
-        position: relative;
-    }
-
     .item-container {
         width: 300px;
+    }
+
+    .item-wrapper {
+        width: 100%;
+        height: 250px;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
     }
 
     .item-info {
@@ -127,8 +97,43 @@
     .item-availability {
         padding-top: 10px;
     }
+}
 
+
+.discount-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
+}
+
+.discount-description {
+    width: 150px;
+    font-size: .85rem;
+    padding-top: 10px;
+}
+
+.discount-item-info {
+    padding: 0;
+    justify-content: center;
+}
+
+.discount-item-quantity {
+    padding: 15px 0;
+}
+
+.discount-item-availability {
+    padding-top: 10px;
+}
+
+.discount-offer {
+    color: red;
+}
+
+@media only screen and (max-width: 768px) {
     .discount-container {
+        width: 100%;
+        height: 200px;
         flex-direction: column;
         align-items: center;
     }
