--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -95,10 +95,11 @@
     left: 0px;
     padding-left: 5px;
     padding-right: 5px;
-    background-color: lightgreen;
-    min-width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    font-size: .7rem;
+    color: #FFF;
 }
 
 @media only screen and (max-width: 768px) {
