--- a/src/styles/subtotal.css
+++ b/src/styles/subtotal.css
@@ -22,17 +22,21 @@
 
 .subtotal-row-label {
     text-align: end;
-    padding-right: 30px;
+    /* padding-right: 30px; */
     font-weight: 700;
+    width: 200px;
 }
 
 .subtotal-row-value {
-    width: 300px;
-    padding-left: 80px;
+    width: 80px;
+    padding-left: 40px;
+}
+
+.subtotal-row-button {
+    width: 80px;
 }
 
 .subtotal-checkout-submit {
-    margin-left: 40px;
     -webkit-border-radius: 6;
     -moz-border-radius: 6;
     border-radius: 6px;
@@ -41,11 +45,13 @@
     padding: 10px 40px 10px 40px;
     text-decoration: none;
     border: none;
+    background: #7FD287;
 }
 
-/* td {
-    border: solid 1px black;
-} */
+td {
+    /* border: solid 1px black; */
+}
+
 @media only screen and (max-width: 768px) {
     .subtotal-container {
         width: 350px;
